# FieldOpt

FieldOpt/: CMakeLists.txt
FieldOpt/Optimization/optimizers/: trust_region_derivative.cpp  trust_region_derivative.h
FieldOpt/WellIndexCalculation/: CMakeLists.txt  WellDefinition.cpp  WellDefinition.h  wellindexcalculator.cpp  wellindexcalculator.hpp  wicalc_main.cpp  wicalc_main.hpp  wicalc_rixx.cpp
FieldOpt/WellIndexCalculation/tests/: test_single_cell_wellindex.cpp
